修改初始框架说明

--- a/.env.development
+++ b/.env.development
@@ -2,18 +2,9 @@
 ENV = 'development'
 
 # base api 这里的代理地址自己需要配置,然后在vue.config.js使用
-#----A工程代理地址
-VUE_APP_HRDS_A_API = 'http://127.0.0.1:8888'
-#----B工程代理地址
-VUE_APP_HRDS_B_API = 'http://127.0.0.1:8889'
-#----C工程代理地址
-VUE_APP_HRDS_C_API = 'http://10.71.4.57:8887'
-#----K工程代理地址
-VUE_APP_HRDS_K_API = 'http://10.71.4.57:8090'
-#----H工程代理地址
-VUE_APP_HRDS_H_API = 'http://10.71.4.57:8092'
-#----G工程代理地址
-VUE_APP_HRDS_G_API = 'http://10.71.4.57:8091'
+#----测试地址
+VUE_APP_HRDS_A_API = 'http://172.168.0.100;12345'
+
 
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
 # to control whether the babel-plugin-dynamic-import-node plugin is enabled.
