修改REDEME的文件引入

--- a/.env.development
+++ b/.env.development
@@ -3,7 +3,7 @@ ENV = 'development'
 
 # base api 这里的代理地址自己需要配置,然后在vue.config.js使用
 #----测试地址
-VUE_APP_HRDS_A_API = 'http://172.168.0.100;12345'
+VUE_APP_HRDS_A_API = 'http://127.0.0.1:12345'
 
 
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
